<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ecg_kolor"
            android:id = "@+id/Image1"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/Text1"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/naglowekMain"
            android:textAlignment="center"
            android:textColor="@color/kolor1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Text2"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/naglowek2Main"
            android:textAlignment="center"
            android:textColor="@color/kolor1"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/Button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:fontFamily="sans-serif-black"
                android:text="@string/logowanieMain"
                android:textColor="@color/kolor2"
                android:textSize="20sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="#00000000"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/kolor2"
                android:text="@string/rejestracjaMain"
                android:id = "@+id/Button2"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>