<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Text1"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nagloweklogowanie"
            android:textAlignment="center"
            android:textColor="@color/kolor1"
            android:textSize="30sp"
            android:layout_marginTop="150sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wpisz_nazwa_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="@color/kolor1"
                android:hint="@string/enter_username"
                app:hintTextColor="@color/kolor2"
                app:boxStrokeColor="@color/kolor2"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="@color/kolor2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/kolor2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/kolor2"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wpisz_haslo_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="@color/kolor1"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/kolor2"
                app:boxStrokeColor="@color/kolor2"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/padlock"
                app:startIconTint="@color/kolor2"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/kolor2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/kolor2"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/zaloguj_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/rounded_rectangle"
                android:layout_marginTop="20dp"/>


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>