<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity3"
    android:background="@color/background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/naglowek_rej3"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/naglowekRejestracja3"
            android:textAlignment="center"
            android:textColor="@color/kolor1"
            android:textSize="30sp"
            android:layout_marginTop="80sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:background="@drawable/black_border"
                app:ccp_contentColor="@color/kolor2"
                app:boxStrokeWidthFocused="2dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wpisz_numer_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="@color/kolor1"
                android:hint="@string/enter_numer"
                app:hintTextColor="@color/kolor2"
                app:boxStrokeColor="@color/kolor2"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/numer"
                app:startIconTint="@color/kolor2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/kolor2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/kolor2"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/zarejestruj_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zakoncz_rejestracje"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/rounded_rectangle"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>