<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Odsluch"
    android:background="@color/background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/komunikatOdsluch"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wybierz_nagranie"
            android:textAlignment="center"
            android:textColor="@color/kolor1"
            android:textSize="30sp"
            android:layout_marginTop="50dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lista_nagran"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/statusTV2"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wybierz_nagranie"
            android:textAlignment="center"
            android:textColor="@color/kolor1"
            android:textSize="15sp"
            android:layout_marginTop="100dp"/>

        <ProgressBar
            android:id="@+id/play_audio_progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:max="100"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/playB"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/playbutton"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/pauseB"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="160dp"
                android:src="@drawable/pause"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/powrot_do_menuB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:background="@drawable/rounded_rectangle"
                android:onClick="callOknoBadanie5"
                android:text="@string/powrot_do_menu"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>